--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
             android:opacity="transparent">
-    <item android:drawable="@color/colorPrimaryDark"/>
+    <item android:drawable="@color/primaryDarkColor"/>
     <item>
         <bitmap
 
