--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <!--<color name="colorPrimary">#008577</color>-->
+    <!--<color name="colorPrimaryDark">#00574B</color>-->
     <color name="colorAccent">#D81B60</color>
     <color name="white">#fff</color>
+    <color name="primaryColor">#7e57c2</color>
+    <color name="primaryLightColor">#b085f5</color>
+    <color name="primaryDarkColor">#4d2c91</color>
+    <color name="primaryTextColor">#ffffff</color>
+
 </resources>
