--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
             android:opacity="transparent">
-    <item android:drawable="@color/primaryDarkColor"/>
+    <item android:drawable="@color/primaryColor"/>
     <item>
         <bitmap
 
                 android:gravity="center"
-                android:src="@drawable/b3"/>
+                android:src="@drawable/fmg1"/>
     </item>
 </layer-list>
