--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,12 @@
     <!--<color name="colorPrimaryDark">#00574B</color>-->
     <color name="colorAccent">#D81B60</color>
     <color name="white">#fff</color>
-    <color name="primaryColor">#7e57c2</color>
-    <color name="primaryLightColor">#b085f5</color>
-    <color name="primaryDarkColor">#4d2c91</color>
+    <color name="primaryColor">#006064</color>
+
+    <color name="primaryLightColor">#428e92</color>
+
+    <color name="primaryDarkColor">#006064</color>
+
     <color name="primaryTextColor">#ffffff</color>
 
 </resources>
