--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
     <item name="android:windowBackground">@drawable/launch_screen</item>
         <!-- Optional, on Android 5+ you can modify the colorPrimaryDark color to match the windowBackground color for further branding-->
          <item name="colorPrimaryDark">@android:color/white</item>
+        <item name="android:statusBarColor">@color/primaryColor</item>
     </style>
 
     <style name="MyToolbarTheme"
