--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    android:background="@drawable/min"
-
 >
-
-
         <TimePicker android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/timePicker"
@@ -18,17 +14,11 @@
                     style="@android:style/Widget.Material.Light.TimePicker"
                     android:visibility="visible"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintEnd_toEndOf="parent" android:timePickerMode="clock">
+                    app:layout_constraintEnd_toEndOf="parent" android:timePickerMode="clock"
+                    android:numbersBackgroundColor="@color/semiTransparentColor"
+        >
 
         </TimePicker>
-        <!--<Button-->
-        <!--android:text="ADD"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/button2"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/timePicker"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>-->
 
         <Button
                 style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
