--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content" xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:clickable="true"
         android:contextClickable="true"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
-
+        card_view:cardElevation="0dp"
+        card_view:cardBackgroundColor="@color/semiTransparentColor"
 >
+    <!--card_view:cardBackgroundColor="@android:color/transparent"-->
+
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp" >
-
+            android:padding="16dp"
+            android:clickable="true"
+    >
+        <!--android:background="@drawable/grad"-->
 
         <TextView
                 android:layout_width="wrap_content"
