--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="primaryDarkColor">#006064</color>
 
     <color name="primaryTextColor">#ffffff</color>
-
+    <color name="semiTransparentColor">#50ffffff</color>
 </resources>
