--- a/app/src/main/res/layout/drawing_layout.xml
+++ b/app/src/main/res/layout/drawing_layout.xml
@@ -5,18 +5,24 @@
                                              android:id="@+id/drawing_layout"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context=".view.DrawActivity">
+                                             tools:context=".view.DrawActivity"
+                                            android:background="@drawable/mtn"
+>
 
     <app.bsc.db.drawing.util.paint.FingerPaintView
             android:id="@+id/fpv_paint"
-            android:layout_width="363dp"
-            android:layout_height="328dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/notSoTransparentColor"
+            android:layout_margin="30dp"
+            android:padding="30dp"
+    />
 
     <TextView
             android:text="Prediction will appear here"
@@ -46,5 +52,6 @@
 
         />
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
