--- a/app/src/main/res/layout/drawing_layout.xml
+++ b/app/src/main/res/layout/drawing_layout.xml
@@ -38,19 +38,35 @@
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:orientation="horizontal"
-
                   android:layout_alignParentBottom="true" android:layout_marginTop="8dp"
                   app:layout_constraintTop_toBottomOf="@+id/fpv_paint" android:layout_marginBottom="8dp"
-                  app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout2">
+                  app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout2"
+                android:padding="20dp"
+    >
 
         <Button
+                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+
                 android:text="Close"
                 android:id="@+id/btnPredict"
-                android:layout_marginHorizontal="120dp"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_width="0dp" android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:background="@color/semiTransparentColor"
+                android:textColor="#000"
 
         />
+
+        <Button
+                android:text="Abort"
+                android:id="@+id/btnAbort"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:layout_weight="1"
+                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+                android:background="@color/semiTransparentColor"
+                android:textColor="#000"
+        />
+
     </LinearLayout>
 
 
