--- a/app/src/main/res/layout/drawing_layout.xml
+++ b/app/src/main/res/layout/drawing_layout.xml
@@ -6,7 +6,7 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              tools:context=".view.DrawActivity"
-                                            android:background="@drawable/mtn"
+                                            android:background="@drawable/min3"
 >
 
     <app.bsc.db.drawing.util.paint.FingerPaintView
