--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:layout_width="match_parent"
+                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    android:background="@drawable/min"
 >
@@ -29,7 +29,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/timePicker"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/white"
+                android:textColor="#000"
         />
+        <!--<Switch-->
+                <!--android:text="Daily"-->
+                <!--android:layout_width="84dp"-->
+                <!--android:layout_height="52dp" app:layout_constraintTop_toTopOf="parent"-->
+                <!--app:layout_constraintBottom_toBottomOf="parent"-->
+                <!--android:id="@+id/switchDaily" app:layout_constraintVertical_bias="0.565"-->
+                <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
