--- a/app/src/main/res/layout/drawing_layout.xml
+++ b/app/src/main/res/layout/drawing_layout.xml
@@ -9,7 +9,7 @@
                                             android:background="@drawable/min3"
 >
 
-    <app.bsc.db.drawing.util.paint.FingerPaintView
+    <app.bsc.db.drawing.view.paint.FingerPaintView
             android:id="@+id/fpv_paint"
             android:layout_width="300dp"
             android:layout_height="300dp"
@@ -29,11 +29,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true" android:id="@+id/txtPrediction"
-            android:layout_marginBottom="8dp" android:textSize="20sp"
+            android:layout_marginBottom="8dp" android:textSize="30sp"
             android:layout_alignParentTop="true" app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/fpv_paint"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/notSoTransparentColor"
+    />
 
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -46,16 +48,15 @@
 
         <Button
                 style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-
                 android:text="Close"
                 android:id="@+id/btnPredict"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginRight="20dp"
-                android:background="@color/semiTransparentColor"
                 android:textColor="#000"
 
         />
+        <!--android:background="@color/semiTransparentColor"-->
 
         <Button
                 android:text="Abort"
@@ -63,11 +64,11 @@
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_weight="1"
                 style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-                android:background="@color/semiTransparentColor"
                 android:textColor="#000"
         />
 
     </LinearLayout>
 
+    <!--android:background="@color/semiTransparentColor"-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
